HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallCopyNonBitcopy/Expected.uv
//! Expected diagnostic metadata for the CallCopyNonBitcopy rejected-source specimen.

expectedDiagnostic("E-UNS-0107", "rule.16.T-Copy")
